syntax = "proto3";

package flyteidl.admin;

option go_package = "github.com/flyteorg/flyte/flyteidl/gen/pb-go/flyteidl/admin";

import "flyteidl/admin/matchable_resource.proto";
import "flyteidl/core/execution.proto";
import "flyteidl/admin/cluster_assignment.proto";

message configurationID {
  string project = 1;

  string domain = 2;

  string workflow = 3;

  string org = 4;
}

message Configuration {
  TaskResourceAttributes task_resource_attributes = 1;

  ClusterResourceAttributes cluster_resource_attributes = 2;

  ExecutionQueueAttributes execution_queue_attributes = 3;

  ExecutionClusterLabel execution_cluster_label = 4;

  core.QualityOfService quality_of_service = 5;

  PluginOverrides plugin_overrides = 6;

  WorkflowExecutionConfig workflow_execution_config = 7;

  ClusterAssignment cluster_assignment = 8;
}

message ConfigurationGetRequest {
  configurationID id = 1;
}

message ConfigurationGetResponse {
  configurationID id = 1;

  string version = 2;

  // Everything set at the project-domain level
  Configuration project_domain_configuration = 3;

  // Everything set at the project level
  Configuration project_configuration = 4;

  // Everything set at the global application level
  Configuration global_configuration = 5;
}

message ConfigurationUpdateRequest {
  configurationID id = 1;

  //+optional
  string version_to_update = 2;
  // Everything set at the project-domain level
  Configuration configuration = 3;
}

message ConfigurationUpdateResponse {
  // Purposefully empty, may be populated in the future.
}

message ConfigurationDocument {
  string version = 1;
  map<string, Configuration> configurations = 3;
}