syntax = "proto3";

package flyteidl.admin;

option go_package = "github.com/flyteorg/flyte/flyteidl/gen/pb-go/flyteidl/admin";

import "flyteidl/admin/matchable_resource.proto";
import "flyteidl/core/execution.proto";
import "flyteidl/admin/cluster_assignment.proto";

message projectID {
  string project = 1;

  string domain = 2;

  string org = 3;
}

message Attributes {
  TaskResourceAttributes task_resource_attributes = 1;

  ClusterResourceAttributes cluster_resource_attributes = 2;

  ExecutionQueueAttributes execution_queue_attributes = 3;

  ExecutionClusterLabel execution_cluster_label = 4;

  core.QualityOfService quality_of_service = 5;

  PluginOverrides plugin_overrides = 6;

  WorkflowExecutionConfig workflow_execution_config = 7;

  ClusterAssignment cluster_assignment = 8;
}

message OverrideAttributesGetRequest {
  projectID id = 1;
}

message OverrideAttributesGetResponse {
  projectID id = 1;

  string version = 2;

  // Everything set at the project-domain level
  Attributes project_domain_attributes = 3;

  // Everything set at the project level
  Attributes project_attributes = 4;

  // Everything set at the global application level
  Attributes global_attributes = 5;
}

message OverrideAttributesUpdateRequest {
  projectID id = 1;

  // Everything set at the project-domain level
  Attributes attribute = 2;
}

message OverrideAttributesUpdateResponse {
  // Purposefully empty, may be populated in the future.
}

message Document {
  string version = 1;
  map<string, OrgDocument> org_documents = 2;
}

message OrgDocument {
  map<string, ProjectDocument> project_documents = 1;
}

message ProjectDocument {
  map<string, ProjectDomainDocument> project_domain_documents = 1;
}

message ProjectDomainDocument {
  map<string, WorkflowDocument> workflow_documents = 1;
}

message WorkflowDocument {
  map<string, LaunchPlanDocument> launch_plan_documents = 1;
}

message LaunchPlanDocument {
  Attributes attributes = 1;
}

message DocumentID {
  string org = 1;
  string domain = 2;
  string project = 3;
  string workflow = 4;
  string launch_plan = 5;
}